2007-05-04  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/poppler.c: removed unused functionality from the
	resolution entry widget.

2007-05-04  Mukund Sivaraman  <muks@mukund.org>

	* plug-ins/common/psd-load.c: Fixed bogus argument in call to
	gimp_progress_update().

2007-05-04  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.def: removed resolution entry symbols.

2007-05-03  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpresolutionentry.[ch]: removed
	* libgimpwidgets/gimpwidgets.h
	* libgimpwidgets/Makefile.am: changed accordingly

	* plug-ins/pygimp/gimpui.defs: resolution entry api removed

	* plug-ins/common/poppler.c: resolution entry code added
	here, with unused api removed.

	Addresses (maybe fixes) bug #351281.
	
2007-05-03  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/paint-funcs.c (convolve_region): minor cleanup.

2007-05-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c: applied patch from Geert Jordaens
	plus some minor cleanups. Fixes bug #433251.

2007-05-03  Sven Neumann  <sven@gimp.org>

	Handle the core part of bug #434274:

	* app/core/gimpchannel.c (gimp_channel_real_boundary): return
	FALSE for an empty channel.

	* app/core/gimpitem.[ch]: added a progress parameter to
	gimp_item_stroke.

	* app/core/gimpchannel.c (gimp_channel_stroke)
	* app/core/gimpselection.c (gimp_selection_stroke): pass progress
	to gimp_message().

	* app/actions/vectors-commands.c
	* app/actions/select-commands.c
	* app/dialogs/stroke-dialog.c
	* app/vectors/gimpvectors.c
	* tools/pdbgen/pdb/edit.pdb
	* tools/pdbgen/pdb/paths.pdb: changed accordingly.

	* app/pdb/edit_cmds.c
	* app/pdb/paths_cmds.c: regenerated.

	* app/core/gimplayermaskundo.c: added a missing cast.

2007-05-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolorframe.c (gimp_color_frame_update): hide the
	Index label if the color index is -1 (happens with sample_average).

2007-05-03  Sven Neumann  <sven@gimp.org>
